--- a/index.html
+++ b/index.html
@@ -222,6 +222,31 @@
         padding: 8px 10px;
         border-radius: 6px;
       }
+
+      /* Deadline banner */
+      .deadline-banner{
+        margin:10px 0 5px;
+        padding:10px 15px;
+        border-radius:8px;
+        font-size:0.95rem;
+      }
+      .deadline-banner.info{
+        background:#e8f8ff;
+        border-left:4px solid #3498db;
+      }
+      .deadline-banner.warn{
+        background:#fff8e5;
+        border-left:4px solid #f39c12;
+      }
+      .deadline-banner.hot{
+        background:#fdeaea;
+        border-left:4px solid #e74c3c;
+      }
+      .deadline-banner.over{
+        background:#ecf0f1;
+        border-left:4px solid #7f8c8d;
+        color:#7f8c8d;
+      }
     </style>
   </head>
   <body>
@@ -236,6 +261,9 @@
 
       <section class="form-section" id="form">
         <div id="loading">Loading assessment data…</div>
+
+        <!-- NEW: deadline / countdown banner -->
+        <div id="deadline-banner" class="deadline-banner hidden"></div>
 
         <div class="form-grid">
           <div>
