--- a/index.html
+++ b/index.html
@@ -223,6 +223,12 @@
         border-radius: 6px;
       }
 
+      .locked-field {
+  background-color: #f5f5f5;
+  cursor: not-allowed;
+}
+
+
       /* Deadline banner */
       .deadline-banner{
         margin:10px 0 5px;
