--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
       }
       .form-section{
         padding:25px;
-        border-bottom:1px solid #eee;
       }
       .form-grid{
         display:grid;
-        grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+        grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
         gap:15px;
         margin-bottom:20px;
       }
@@ -124,6 +123,30 @@
         color:#2c3e50;
         background-color:#fff;
       }
+      /* Multiple-choice (MC) question styles */
+      .mc-options{
+        margin-top:10px;
+        display:flex;
+        flex-direction:column;
+        gap:6px;
+      }
+      .mc-option{
+        display:flex;
+        align-items:flex-start;
+        gap:8px;
+        padding:8px 10px;
+        border-radius:6px;
+        border:1px solid #d0d7de;
+        background:#fff;
+        cursor:pointer;
+        text-align:left;
+      }
+      .mc-option input[type=radio]{
+        margin-top:2px;
+      }
+      .mc-option span{
+        flex:1;
+      }
       /* Primary buttons use the maroon colour; darken slightly on hover */
       .btn{
         background:#6e1818;
@@ -134,10 +157,9 @@
         border-radius:6px;
         cursor:pointer;
         transition:background .2s, opacity .2s;
-        margin-right:10px;
       }
       .btn:hover{
-        background:#581313;
+        background:#8a1f1f;
       }
       .btn:disabled{
         opacity:0.5;
@@ -194,26 +216,14 @@
         color:#666;
         font-size:1.1rem;
       }
-      @media(max-width:600px){
-        .form-grid{grid-template-columns:1fr}
-        .btn{width:100%;margin:8px 0}
+      .q-img{
+        display:block;
+        max-width:100%;
+        height:auto;
+        margin:10px 0;
+        border-radius:6px;
+        border:1px solid #ddd;
       }
-
-      .q-img {
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        margin: 10px 0;
-        display: block;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-
-      .q.correct { background:#e8f8ea; }
-      .q.partial { background:#fff8e5; }
-      .q.wrong   { background:#fdeaea; }
-
-      /* Inline hint under questions (not in PDF) */
       .hint-inline {
         margin-top: 10px;
         font-size: 0.95rem;
@@ -222,22 +232,18 @@
         padding: 8px 10px;
         border-radius: 6px;
       }
-
-      .locked-field {
-  background-color: #f5f5f5;
-  cursor: not-allowed;
-}
-
-
-      /* Deadline banner */
       .deadline-banner{
-        margin:10px 0 5px;
-        padding:10px 15px;
-        border-radius:8px;
-        font-size:0.95rem;
+        margin:10px 0 15px;
+        padding:10px 12px;
+        border-radius:6px;
+        font-size:.9rem;
+        display:flex;
+        flex-wrap:wrap;
+        align-items:center;
+        gap:8px;
       }
       .deadline-banner.info{
-        background:#e8f8ff;
+        background:#eef4ff;
         border-left:4px solid #3498db;
       }
       .deadline-banner.warn{
@@ -252,6 +258,11 @@
         background:#ecf0f1;
         border-left:4px solid #7f8c8d;
         color:#7f8c8d;
+      }
+      @media(max-width:600px){
+        .form-grid{
+          grid-template-columns:1fr;
+        }
       }
     </style>
   </head>
@@ -268,7 +279,7 @@
       <section class="form-section" id="form">
         <div id="loading">Loading assessment data…</div>
 
-        <!-- NEW: deadline / countdown banner -->
+        <!-- Deadline / countdown banner -->
         <div id="deadline-banner" class="deadline-banner hidden"></div>
 
         <div class="form-grid">
@@ -285,7 +296,7 @@
           </div>
           <div>
             <label for="teacher">Teacher</label>
-            <select id="teacher" required>
+            <select id="teacher">
               <option value="">Select teacher</option>
             </select>
           </div>
@@ -304,7 +315,7 @@
         <div id="questions"></div>
 
         <div class="btn-group">
-          <button class="btn" onclick="submitWork()">Submit &amp; Grade</button>
+          <button class="btn" id="submitBtn" onclick="submitWork()">Submit &amp; Grade</button>
         </div>
       </section>
 
@@ -324,7 +335,10 @@
       </section>
     </div>
 
-    <!-- Load the application logic. Using a regular script tag avoids issues with ES module loading via the file:// protocol. -->
+    <!-- Toast element for notifications -->
+    <div id="toast" class="toast" style="display:none;"></div>
+
+    <!-- Application logic -->
     <script src="script.js?v=3" defer></script>
   </body>
 </html>
