--- a/index.html
+++ b/index.html
@@ -1,288 +1,101 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="manifest" href="manifest.webmanifest">
-  <title id="page-title">Loading…</title>
-  <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+  <head>
+    <link rel="manifest" href="manifest.webmanifest">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title id="page-title">Loading…</title>
+    <!-- Add a favicon for better browser tab appearance -->
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
+    <link rel="stylesheet" href="styles.css">
 
-  <style>
-    *{margin:0;padding:0;box-sizing:border-box}
-    body{
-      font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;
-      background:#f4f6f9;
-      color:#2c3e50;
-      line-height:1.6;
-      padding:20px
-    }
-    .container{
-      max-width:900px;
-      margin:auto;
-      background:#fff;
-      border-radius:12px;
-      overflow:hidden;
-      box-shadow:0 4px 20px rgba(0,0,0,.1)
-    }
-    header{
-      background:#6e1818;
-      color:#fff;
-      padding:20px;
-      display:flex;
-      align-items:center;
-      justify-content:flex-start;
-      gap:16px;
-    }
-    header img.crest{
-      height:60px;
-      width:auto;
-      flex-shrink:0;
-    }
-    header .header-text{
-      display:flex;
-      flex-direction:column;
-      justify-content:center;
-    }
-    header h1{
-      margin:0;
-      font-size:1.8rem;
-    }
-    header p{
-      margin:5px 0 0;
-      font-size:1rem;
-      opacity:.9;
-    }
-    .form-section{
-      padding:25px;
-      border-bottom:1px solid #eee;
-    }
-    .form-grid{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
-      gap:15px;
-      margin-bottom:20px;
-    }
-    label{
-      display:block;
-      margin-bottom:6px;
-      font-weight:600;
-      color:#2c3e50;
-    }
-    input,select,textarea{
-      width:100%;
-      padding:10px;
-      border:1px solid #ccc;
-      border-radius:6px;
-      font-size:1rem;
-      transition:border .2s;
-    }
-    input:focus,select:focus,textarea:focus{
-      outline:none;
-      border-color:#6e1818;
-      box-shadow:0 0 0 2px rgba(110,24,24,0.2);
-    }
-    .locked-msg{
-      font-size:.9rem;
-      color:#e74c3c;
-      margin-top:5px;
-    }
-    .hidden{display:none}
-    .assessment-header{
-      background:#6e1818;
-      color:#fff;
-      padding:15px;
-      border-radius:10px;
-      margin:20px 0;
-    }
-    .assessment-header h2{
-      margin:0;
-      font-size:1.5rem;
-    }
-    .q{
-      background:#f8f9fa;
-      padding:18px;
-      margin-bottom:18px;
-      border-radius:8px;
-      border-left:4px solid #6e1818;
-    }
-    .q strong{
-      color:#2c3e50;
-      font-size:1.1rem;
-      display:block;
-      margin-bottom:8px;
-    }
-    .answer-field{
-      margin-top:10px;
-      font-family:inherit;
-      color:#2c3e50;
-      background-color:#fff;
-    }
-    .btn{
-      background:#6e1818;
-      color:#fff;
-      border:none;
-      padding:12px 20px;
-      font-size:1rem;
-      border-radius:6px;
-      cursor:pointer;
-      transition:background .2s;
-      margin-right:10px;
-    }
-    .btn:hover{background:#581313}
-    .btn:disabled{
-      opacity:0.5;
-      cursor:not-allowed;
-    }
-    .btn-secondary{background:#7f8c8d}
-    .btn-secondary:hover{background:#95a5a6}
-    .btn-group{
-      margin-top:20px;
-      text-align:center;
-    }
-    .result-section{
-      padding:25px;
-      text-align:center;
-    }
-    .grade{
-      font-size:2.5rem;
-      font-weight:bold;
-      color:#6e1818;
-    }
-    .grade small{
-      font-size:1.2rem;
-      color:#7f8c8d;
-    }
-    .feedback{
-      text-align:left;
-      padding:15px;
-      margin:12px 0;
-      border-radius:8px;
-      background:#f8f9fa;
-    }
-    .correct{border-left:5px solid #27ae60}
-    .partial{border-left:5px solid #f39c12}
-    .incorrect{border-left:5px solid #e74c3c}
-    .q.correct{background:#e8f8ea}
-    .q.partial{background:#fff8e5}
-    .q.incorrect{background:#fdeaea}
-    .hint-inline{
-      margin-top:10px;
-      font-size:0.95rem;
-      background:#fff8e5;
-      border-left:4px solid #f39c12;
-      padding:8px 10px;
-      border-radius:6px;
-    }
-    .locked-field{
-      background-color:#f5f5f5;
-      cursor:not-allowed;
-    }
-    .q-img{
-      width:100%;
-      max-width:100%;
-      height:auto;
-      margin:10px 0;
-      display:block;
-      border:1px solid #ccc;
-      border-radius:4px;
-    }
-    .deadline-banner{
-      margin:10px 0 20px;
-      padding:12px 16px;
-      border-radius:8px;
-      font-size:0.98rem;
-      font-weight:500;
-    }
-    .deadline-banner.info{background:#e8f8ff;border-left:4px solid #3498db;color:#2980b9}
-    .deadline-banner.warn{background:#fff8e5;border-left:4px solid #f39c12;color:#e67e22}
-    .deadline-banner.hot{background:#fdeaea;border-left:4px solid #e74c3c;color:#c0392b}
-    .deadline-banner.over{background:#ecf0f1;border-left:4px solid #7f8c8d;color:#7f8c8d}
-    #loading{
-      text-align:center;
-      padding:30px;
-      color:#666;
-      font-size:1.1rem;
-    }
-    @media(max-width:600px){
-      .form-grid{grid-template-columns:1fr}
-      .btn{width:100%;margin:8px 0}
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <img src="crest_shield.png" alt="Pukekohe High School crest" class="crest">
-      <div class="header-text">
-        <h1 id="header-title">Loading…</h1>
-        <p id="header-subtitle">Loading…</p>
-      </div>
-    </header>
-
-    <section class="form-section" id="form">
-      <div id="loading">Loading assessment data…</div>
-
-      <!-- Deadline banner -->
-      <div id="deadline-banner" class="deadline-banner hidden"></div>
-
-      <div class="form-grid">
-        <div>
-          <label for="name">Student Name</label>
-          <input type="text" id="name" placeholder="Enter your name" required />
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <!-- Replace this src with your actual crest image if needed -->
+        <img src="icon-192.png" alt="School Crest" class="crest" />
+        <div class="header-text">
+          <h1 id="app-title">Pukekohe High School</h1>
+          <p id="app-subtitle">Technology Assessment</p>
         </div>
-        <div>
-          <label for="id">Student ID</label>
-          <input type="text" id="id" placeholder="e.g. 12345" required />
-          <div id="locked-msg" class="locked-msg hidden">
-            ID locked to: <strong id="locked-id"></strong>
+      </header>
+
+      <div id="deadline-banner" class="deadline-banner hidden">
+        <span id="deadline-text"></span>
+      </div>
+
+      <section class="info">
+        <h2>Student Information</h2>
+        <div class="info-grid">
+          <div>
+            <label for="name">Student Name</label>
+            <input id="name" type="text" placeholder="Enter your full name">
+          </div>
+          <div>
+            <label for="id">Student ID</label>
+            <input id="id" type="text" placeholder="Enter your ID">
+            <div id="locked-msg" class="locked-msg hidden">
+              ID locked as <span id="locked-id"></span> for this device.
+            </div>
+          </div>
+          <div>
+            <label for="teacher">Teacher</label>
+            <select id="teacher">
+              <option value="">Select teacher</option>
+            </select>
           </div>
         </div>
-        <div>
-          <label for="teacher">Teacher</label>
-          <select id="teacher" required>
-            <option value="">Select teacher</option>
-          </select>
+      </section>
+
+      <section class="assessment">
+        <h2>Assessment</h2>
+        <div id="loading" class="loading">Loading questions…</div>
+        <div class="info-grid">
+          <div>
+            <label for="assessmentSelector">Assessment</label>
+            <select id="assessmentSelector">
+              <option value="">Select assessment</option>
+            </select>
+          </div>
+          <div>
+            <label for="assessmentPartSelector">Part</label>
+            <select id="assessmentPartSelector">
+              <option value="">Select part</option>
+            </select>
+          </div>
         </div>
-        <div>
-          <label for="assessmentSelector">Assessment Part</label>
-          <select id="assessmentSelector">
-            <option value="">Select part</option>
-          </select>
+
+        <div class="btn-group">
+          <button class="btn" onclick="loadAssessment()">Load Assessment</button>
         </div>
-      </div>
 
-      <div class="btn-group">
-        <button type="button" class="btn" id="loadBtn" onclick="loadAssessment()">Load Assessment</button>
-      </div>
+        <section class="form-section" id="form">
+          <div id="questions"></div>
 
-      <div id="questions" class="hidden"></div>
+          <div class="btn-group">
+            <button class="btn" onclick="submitWork()">Submit &amp; Grade</button>
+          </div>
+        </section>
+      </section>
 
-      <div class="btn-group">
-        <button type="button" class="btn" id="submitBtn" onclick="submitWork()">Submit & Grade</button>
-      </div>
-    </section>
+      <section class="result-section hidden" id="result">
+        <div class="result-header">
+          <h2>Assessment Complete!</h2>
+          <p><strong id="student"></strong> to <span id="teacher-name"></span></p>
+          <div class="grade" id="grade"></div>
+        </div>
+        <div id="answers"></div>
+        <div class="btn-group">
+          <button class="btn" id="emailBtn" onclick="emailWork()" disabled>
+            Email via Default App
+          </button>
+          <button class="btn btn-secondary" onclick="back()">Back to Form</button>
+        </div>
+      </section>
+    </div>
 
-    <section class="result-section hidden" id="result">
-      <div class="result-header">
-        <h2>Assessment Complete!</h2>
-        <p><strong id="student"></strong> to <span id="teacher-name"></span></p>
-        <div class="grade" id="grade"></div>
-      </div>
-      <div id="answers"></div>
-      <div class="btn-group">
-        <button type="button" class="btn" id="emailBtn" onclick="emailWork()" disabled>
-          Email via Default App
-        </button>
-        <button type="button" class="btn btn-secondary" onclick="back()">Back to Form</button>
-      </div>
-    </section>
-  </div>
-
-  <!-- External libraries for PDF generation -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
-  <!-- App logic -->
-  <script src="script.js?v=7" defer></script>
-</body>
+    <!-- Load the application logic. Using a regular script tag avoids issues with ES module loading via the file:// protocol. -->
+    <script src="script.js" defer></script>
+  </body>
 </html>
